Rely on HashMaps for this, rather than MapN